deployment/kubernetes/manifests/consul.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consul
  labels:
    app: consul
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consul
  template:
    metadata:
      labels:
        app: consul
    spec:
      containers:
      - name: consul
        image: consul:1.15
        ports:
        - containerPort: 8500
          name: http
        - containerPort: 8600
          name: dns
        command:
        - consul
        - agent
        - -dev
        - -client=0.0.0.0
---
apiVersion: v1
kind: Service
metadata:
  name: consul
spec:
  selector:
    app: consul
  ports:
  - port: 8500
    targetPort: 8500
    name: http
  - port: 8600
    targetPort: 8600
    name: dns
  type: ClusterIP
